--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -380,6 +381,9 @@
       <button id="theme-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle theme">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
       </button>
+      <button id="voice-toggle" class="text-[var(--accent)] hover:scale-110 focus:outline focus:outline-2 focus:outline-[var(--focus)] p-2" aria-label="Toggle voice">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path></svg>
+      </button>
     </div>
     <div class="welcome-container" id="welcome-container">
       <div id="nebula-container" class="nebula-container">
@@ -389,7 +393,7 @@
       <div class="welcome-message text-xl font-semibold text-center" id="welcome-message">Hey! I'm Vynix AI. What's on your mind?</div>
     </div>
     <div class="chat-messages flex-1 overflow-y-auto flex flex-col gap-3 pb-20" id="chat-messages" aria-live="polite" role="log"></div>
-    <div class="chat-input-container fixed bottom-1 left-1 right-1 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center z-20">
+    <div class="chat-input-container fixed bottom-1 left-1 right-1 max-w-3xl mx-auto bg-[var(--card-bg)] border border-[var(--border)] rounded-full shadow-xl flex items-center z-20" id="chat-input-container">
       <input type="text" id="chat-input" class="flex-1 bg-transparent p-2 text-[var(--text-primary)] outline-none focus:ring-2 focus:ring-[var(--focus)] rounded-full" placeholder="Type your question..." aria-label="Type your question" maxlength="800">
       <button id="send-button" class="bg-gradient-to-r from-[var(--primary)] to-[var(--accent)] text-white p-2.5 rounded-full hover:scale-105 focus:outline focus:outline-2 focus:outline-[var(--focus)] transition" aria-label="Send message">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
@@ -416,6 +420,8 @@
       messages: [],
       theme: localStorage.getItem('theme') || 'dark',
       language: localStorage.getItem('language') || 'en',
+      voiceEnabled: localStorage.getItem('voiceEnabled') === 'true' || false,
+      elevenLabsApiKey: 'sk_64558ca8f960edcb2df650f8a728ff31840f3678b280c369', // Replace with your actual ElevenLabs API key
       geminiApiKey: 'AIzaSyBZb3DQUktOdE_3IKDKdGLOB2B75nc9zjw',
       aiAvatar: 'https://i.postimg.cc/ZR0jj3Yr/Black-and-White-Minimalist-Simple-Modern-Technology-AI-Logo-20250824-182710-0000.png',
       userName: 'User',
@@ -428,6 +434,7 @@
       sendButton: document.getElementById('send-button'),
       newChatButton: document.getElementById('new-chat-button'),
       themeToggle: document.getElementById('theme-toggle'),
+      voiceToggle: document.getElementById('voice-toggle'),
       languageSelect: document.getElementById('language-select'),
       welcomeContainer: document.getElementById('welcome-container'),
       nebulaContainer: document.getElementById('nebula-container'),
@@ -436,6 +443,7 @@
       feedbackInput: document.getElementById('feedback-input'),
       modalSubmit: document.getElementById('modal-submit'),
       modalCancel: document.getElementById('modal-cancel'),
+      chatInputContainer: document.getElementById('chat-input-container'),
     };
 
     function showToast(message, type = 'error') {
@@ -534,6 +542,12 @@
       state.theme = state.theme === 'dark' ? 'light' : 'dark';
       document.body.dataset.theme = state.theme;
       localStorage.setItem('theme', state.theme);
+    });
+
+    elements.voiceToggle.addEventListener('click', () => {
+      state.voiceEnabled = !state.voiceEnabled;
+      localStorage.setItem('voiceEnabled', state.voiceEnabled);
+      showToast(`Voice ${state.voiceEnabled ? 'enabled' : 'disabled'}`, 'success');
     });
 
     elements.languageSelect.addEventListener('change', () => {
@@ -652,6 +666,9 @@
           } else {
             indicator.remove();
             p.innerHTML = marked.parse(text);
+            if (sender === 'ai' && state.voiceEnabled) {
+              playElevenLabsAudio(text);
+            }
           }
         };
         type();
@@ -695,6 +712,41 @@
       }
     }
 
+    async function playElevenLabsAudio(text) {
+      if (!state.elevenLabsApiKey || state.elevenLabsApiKey === 'YOUR_ELEVENLABS_API_KEY') {
+        showToast('Please set your ElevenLabs API key in the code', 'error');
+        return;
+      }
+      try {
+        const voiceId = '21m00Tcm4TlvDq8ikWAM'; // Example voice ID (Rachel); replace with preferred voice ID
+        const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${voiceId}`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'xi-api-key': state.elevenLabsApiKey,
+          },
+          body: JSON.stringify({
+            text: text,
+            model_id: 'eleven_multilingual_v2',
+            voice_settings: {
+              stability: 0.5,
+              similarity_boost: 0.5,
+            },
+          }),
+        });
+
+        if (!response.ok) throw new Error('Failed to generate audio');
+
+        const audioBlob = await response.blob();
+        const audioUrl = URL.createObjectURL(audioBlob);
+        const audio = new Audio(audioUrl);
+        audio.play().catch(err => showToast('Audio playback failed', 'error'));
+      } catch (error) {
+        showToast('Error generating audio', 'error');
+        console.error(error);
+      }
+    }
+
     const send = async () => {
       const q = elements.chatInput.value.trim();
       if (!q || elements.sendButton.disabled) return;
@@ -728,3 +780,4 @@
   </script>
 </body>
 </html>
+```
