--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
       theme: localStorage.getItem('theme') || 'dark',
       language: localStorage.getItem('language') || 'en',
       voiceEnabled: localStorage.getItem('voiceEnabled') === 'true' || false,
-      elevenLabsApiKey: 'sk_64558ca8f960edcb2df650f8a728ff31840f3678b280c369', // Replace with your actual ElevenLabs API key
-      geminiApiKey: 'AIzaSyBZb3DQUktOdE_3IKDKdGLOB2B75nc9zjw',
+      elevenLabsApiKey: 'sk_64558ca8f960edcb2df650f8a728ff31840f3678b280c369', // SECURITY WARNING: Move this to a backend proxy
+      geminiApiKey: 'AIzaSyBZb3DQUktOdE_3IKDKdGLOB2B75nc9zjw', // SECURITY WARNING: Move this to a backend proxy
       aiAvatar: 'https://i.postimg.cc/ZR0jj3Yr/Black-and-White-Minimalist-Simple-Modern-Technology-AI-Logo-20250824-182710-0000.png',
       userName: 'User',
       nebulaAnimationFrame: null,
@@ -717,34 +717,143 @@
         return;
       }
       try {
-        const voiceId = '21m00Tcm4TlvDq8ikWAM'; // Example voice ID (Rachel); replace with preferred voice ID
-        const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${voiceId}`, {
+        const voiceId = '21m00Tcm4TlvDq8ikWAM'; // Rachel; multilingual-compatible
+        const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${voiceId}/stream`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
-            'xi-api-key': state.elevenLabsApiKey,
+            'xi-api-key': state.elevenLabsApiKey, // Move to backend for security
           },
           body: JSON.stringify({
             text: text,
-            model_id: 'eleven_multilingual_v2',
+            model_id: 'eleven_flash_v2_5', // Low-latency model
             voice_settings: {
               stability: 0.5,
-              similarity_boost: 0.5,
+              similarity_boost: 0.8,
             },
+            output_format: 'pcm_16000', // PCM for streaming
+            optimize_streaming_latency: 3, // Max speed (0-4)
           }),
         });
 
-        if (!response.ok) throw new Error('Failed to generate audio');
+        if (!response.ok) throw new Error('Failed to generate audio stream');
 
-        const audioBlob = await response.blob();
-        const audioUrl = URL.createObjectURL(audioBlob);
-        const audio = new Audio(audioUrl);
-        audio.play().catch(err => showToast('Audio playback failed', 'error'));
+        // Web Audio API for streaming playback
+        const audioContext = new AudioContext();
+        const reader = response.body.getReader();
+        let bufferQueue = [];
+        let isPlaying = false;
+        let source = null;
+
+        async function processStream() {
+          while (true) {
+            const { done, value } = await reader.read();
+            if (done) {
+              audioContext.close();
+              break;
+            }
+
+            // Accumulate audio chunks
+            bufferQueue.push(value);
+
+            // Start playback when enough data is buffered
+            if (!isPlaying && bufferQueue.length >= 2) { // Adjust for smooth start
+              isPlaying = true;
+              const concatenated = new Uint8Array(bufferQueue.reduce((acc, curr) => acc + curr.length, 0));
+              let offset = 0;
+              for (const chunk of bufferQueue) {
+                concatenated.set(chunk, offset);
+                offset += chunk.length;
+              }
+              bufferQueue = [];
+
+              // Decode and play
+              audioContext.decodeAudioData(concatenated.buffer, (buffer) => {
+                source = audioContext.createBufferSource();
+                source.buffer = buffer;
+                source.connect(audioContext.destination);
+                source.start();
+              }, (err) => {
+                showToast('Audio decoding failed', 'error');
+                console.error(err);
+              });
+            } else if (isPlaying) {
+              // Append new chunks
+              audioContext.decodeAudioData(value.buffer, (buffer) => {
+                const newSource = audioContext.createBufferSource();
+                newSource.buffer = buffer;
+                newSource.connect(audioContext.destination);
+                newSource.start(audioContext.currentTime + source.buffer.duration);
+                source = newSource;
+              }, (err) => {
+                showToast('Audio decoding failed', 'error');
+                console.error(err);
+              });
+            }
+          }
+        }
+
+        processStream().catch(err => {
+          showToast('Error streaming audio', 'error');
+          console.error(err);
+        });
       } catch (error) {
         showToast('Error generating audio', 'error');
         console.error(error);
       }
     }
+
+    /* Optional WebSocket version for streaming AI responses (future use)
+    async function playElevenLabsAudio(textStream) {
+      const voiceId = '21m00Tcm4TlvDq8ikWAM';
+      const ws = new WebSocket(`wss://api.elevenlabs.io/v1/text-to-speech/${voiceId}/stream-input?model_id=eleven_flash_v2_5&optimize_streaming_latency=3`, [], {
+        headers: { 'xi-api-key': state.elevenLabsApiKey }
+      });
+
+      const audioContext = new AudioContext();
+      let source = null;
+
+      ws.onopen = () => {
+        ws.send(JSON.stringify({
+          text: " ",
+          voice_settings: { stability: 0.5, similarity_boost: 0.8 },
+          try_trigger_generation: false,
+          output_format: "pcm_16000"
+        }));
+      };
+
+      ws.onmessage = async (event) => {
+        const data = JSON.parse(event.data);
+        if (data.audio) {
+          const audioChunk = Uint8Array.from(atob(data.audio), c => c.charCodeAt(0));
+          const buffer = await audioContext.decodeAudioData(audioChunk.buffer);
+          const newSource = audioContext.createBufferSource();
+          newSource.buffer = buffer;
+          newSource.connect(audioContext.destination);
+          if (!source) {
+            newSource.start();
+          } else {
+            newSource.start(audioContext.currentTime + source.buffer.duration);
+          }
+          source = newSource;
+        }
+      };
+
+      ws.onerror = (err) => {
+        showToast('Audio streaming error', 'error');
+        console.error(err);
+      };
+
+      for await (const chunk of textStream) {
+        ws.send(JSON.stringify({ text: chunk, try_trigger_generation: true }));
+      }
+
+      ws.onclose = () => {
+        ws.send(JSON.stringify({ text: " ", try_trigger_generation: false }));
+        audioContext.close();
+      };
+    }
+    */
 
     const send = async () => {
       const q = elements.chatInput.value.trim();
@@ -762,6 +871,7 @@
         elements.chatInput.focus();
       }
     };
+
     elements.sendButton.addEventListener('click', send);
     elements.chatInput.addEventListener('keypress', e => {
       if (e.key === 'Enter') {
@@ -776,6 +886,27 @@
     document.body.dataset.theme = state.theme;
     elements.languageSelect.value = state.language;
     startNebulaAnimation();
+
+    // SECURITY RECOMMENDATION: Move API calls to a backend proxy
+    /*
+    // Example Node.js backend (e.g., Express)
+    const express = require('express');
+    const app = express();
+    app.use(express.json());
+    app.post('/tts-stream', async (req, res) => {
+      const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/21m00Tcm4TlvDq8ikWAM/stream`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'xi-api-key': process.env.ELEVENLABS_API_KEY // Store in .env
+        },
+        body: JSON.stringify(req.body)
+      });
+      res.set('Content-Type', 'audio/pcm');
+      response.body.pipe(res);
+    });
+    // Update playElevenLabsAudio to call /tts-stream instead
+    */
   </script>
 </body>
 </html>
