--- a/signup.html
+++ b/signup.html
@@ -7,41 +7,41 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #1E3A8A;
-      --accent: #000000;
-      --bg: #0A0A0A;
-      --card-bg: #1A1A1A;
-      --text-primary: #F3F4F6;
-      --text-secondary: #A3A3A3;
-      --border: #2D2D2D;
-      --highlight: #2A2A2A;
-      --focus: #4B5EAA;
+      --primary: #3B82F6;
+      --accent: #A855F7;
+      --bg: #0F172A;
+      --card-bg: rgba(30, 41, 59, 0.6);
+      --text-primary: #F8FAFC;
+      --text-secondary: #94A3B8;
+      --border: rgba(255, 255, 255, 0.1);
+      --highlight: rgba(255, 255, 255, 0.05);
+      --focus: #60A5FA;
       --white: #FFFFFF;
-      --error: #EF4444;
-      --success: #10B981;
-      --glow: rgba(0, 0, 0, 0.5);
-      --nebula-blue: rgba(30, 58, 138, 0.5);
-      --nebula-dark: rgba(0, 0, 0, 0.3);
+      --error: #F87171;
+      --success: #34D399;
+      --glow: rgba(59, 130, 246, 0.3);
+      --nebula-blue: rgba(59, 130, 246, 0.5);
+      --nebula-dark: rgba(15, 23, 42, 0.6);
     }
 
     [data-theme="light"] {
-      --bg: #F9FAFB;
-      --card-bg: #FFFFFF;
-      --text-primary: #111827;
-      --text-secondary: #6B7280;
-      --border: #D1D5DB;
-      --highlight: #E5E7EB;
-      --glow: rgba(0, 0, 0, 0.3);
-      --nebula-blue: rgba(59, 130, 246, 0.3);
-      --nebula-dark: rgba(0, 0, 0, 0.2);
+      --bg: #F1F5F9;
+      --card-bg: rgba(255, 255, 255, 0.8);
+      --text-primary: #1E293B;
+      --text-secondary: #64748B;
+      --border: rgba(0, 0, 0, 0.1);
+      --highlight: rgba(0, 0, 0, 0.05);
+      --glow: rgba(59, 130, 246, 0.2);
+      --nebula-blue: rgba(59, 130, 246, 0.4);
+      --nebula-dark: rgba(0, 0, 0, 0.3);
     }
 
     body {
-      font-family: 'Poppins', system-ui, sans-serif;
-      background: var(--bg);
+      font-family: 'Inter', system-ui, sans-serif;
+      background: linear-gradient(135deg, var(--bg), #1E293B);
       color: var(--text-primary);
       min-height: 100vh;
       margin: 0;
@@ -50,52 +50,60 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
     }
 
     @media (prefers-reduced-motion: no-preference) {
       .transition { transition: all 0.3s ease; }
-      .slide-in { animation: slideIn 0.3s ease; }
-      .pulse-glow { animation: pulseGlow 2s infinite ease-in-out; }
-      .nebula { animation: nebulaSwirl 6s infinite ease-in-out; }
+      .slide-in { animation: slideIn 0.5s ease-out; }
+      .pulse-glow { animation: pulseGlow 1.8s infinite ease-in-out; }
+      .nebula { animation: nebulaSwirl 10s infinite ease-in-out; }
+      .nebula-icon { animation: nebulaIconSpin 6s infinite linear; }
     }
 
     @keyframes slideIn {
-      from { opacity: 0; transform: translateX(20px); }
-      to { opacity: 1; transform: translateX(0); }
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes pulseGlow {
-      0%, 100% { transform: scale(1); box-shadow: 0 0 10px var(--glow); }
-      50% { transform: scale(1.05); box-shadow: 0 0 20px var(--glow); }
+      0%, 100% { transform: scale(1); box-shadow: 0 0 12px var(--glow); }
+      50% { transform: scale(1.03); box-shadow: 0 0 24px var(--glow); }
     }
 
     @keyframes nebulaSwirl {
       0% {
         transform: scale(1) rotate(0deg);
-        filter: blur(10px);
+        filter: blur(14px);
         opacity: 0.8;
       }
       50% {
-        transform: scale(1.2) rotate(180deg);
-        filter: blur(5px);
+        transform: scale(1.4) rotate(180deg);
+        filter: blur(10px);
         opacity: 0.6;
       }
       100% {
         transform: scale(1) rotate(360deg);
-        filter: blur(10px);
+        filter: blur(14px);
         opacity: 0.8;
       }
+    }
+
+    @keyframes nebulaIconSpin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .auth-container {
       position: relative;
       background: var(--card-bg);
+      backdrop-filter: blur(10px);
       border: 1px solid var(--border);
-      border-radius: 1rem;
-      padding: 2rem;
-      max-width: 400px;
+      border-radius: 1.5rem;
+      padding: 2.5rem;
+      max-width: 420px;
       width: 90%;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       z-index: 10;
       display: flex;
       flex-direction: column;
@@ -104,11 +112,11 @@
 
     .nebula-container {
       position: absolute;
-      top: -80px;
+      top: -100px;
       left: 50%;
       transform: translateX(-50%);
-      width: 200px;
-      height: 200px;
+      width: 260px;
+      height: 260px;
       pointer-events: none;
       z-index: 9;
     }
@@ -116,7 +124,7 @@
     .nebula {
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle, var(--nebula-blue) 20%, var(--nebula-dark) 60%, transparent);
+      background: radial-gradient(circle, var(--nebula-blue) 5%, var(--nebula-dark) 40%, transparent);
       border-radius: 50%;
     }
 
@@ -126,44 +134,45 @@
       left: 0;
       width: 100%;
       height: 100%;
-      opacity: 0.5;
+      opacity: 0.7;
     }
 
     .auth-container input {
       width: 100%;
       background: var(--highlight);
       border: 1px solid var(--border);
-      border-radius: 0.5rem;
-      padding: 0.75rem;
+      border-radius: 0.75rem;
+      padding: 0.875rem;
       color: var(--text-primary);
       outline: none;
-      font-size: 0.875rem;
-      margin-bottom: 1rem;
+      font-size: 0.9rem;
+      margin-bottom: 1.25rem;
+      transition: border-color 0.3s ease, box-shadow 0.3s ease;
     }
 
     .auth-container input:focus {
       border-color: var(--focus);
-      box-shadow: 0 0 0 2px var(--glow);
+      box-shadow: 0 0 0 3px var(--glow);
     }
 
     .auth-container .button-container {
       width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.25rem;
     }
 
     .auth-container button {
       width: 100%;
       background: linear-gradient(135deg, var(--primary), var(--accent));
       color: var(--white);
-      padding: 0.75rem;
-      border-radius: 0.5rem;
-      font-size: 0.875rem;
+      padding: 0.875rem;
+      border-radius: 0.75rem;
+      font-size: 0.9rem;
       font-weight: 500;
       border: none;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -171,79 +180,86 @@
     }
 
     .auth-container button:hover {
-      transform: scale(1.05);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 16px var(--glow);
     }
 
     .auth-container button:focus {
       outline: 2px solid var(--focus);
+      outline-offset: 2px;
     }
 
     .google-button {
-      background: var(--card-bg);
+      background: transparent;
       border: 1px solid var(--border);
       color: var(--text-primary);
     }
 
     .google-button:hover {
       background: var(--highlight);
-      transform: scale(1.05);
+      transform: translateY(-2px);
     }
 
     .forgot-password {
       color: var(--focus);
-      font-size: 0.75rem;
+      font-size: 0.8rem;
       text-align: right;
       width: 100%;
-      margin-bottom: 1rem;
+      margin-bottom: 1.25rem;
       text-decoration: none;
+      transition: color 0.3s ease;
     }
 
     .forgot-password:hover {
+      color: var(--accent);
       text-decoration: underline;
     }
 
     .toggle-auth {
       color: var(--text-secondary);
       text-align: center;
-      margin-top: 1rem;
-      font-size: 0.875rem;
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
     }
 
     .toggle-auth a {
       color: var(--focus);
       text-decoration: none;
       font-weight: 500;
+      transition: color 0.3s ease;
     }
 
     .toggle-auth a:hover {
+      color: var(--accent);
       text-decoration: underline;
     }
 
     .error-message {
       color: var(--error);
-      font-size: 0.75rem;
-      margin-bottom: 1rem;
+      font-size: 0.8rem;
+      margin-bottom: 1.25rem;
       text-align: center;
+      transition: opacity 0.3s ease;
     }
 
     @media (max-width: 640px) {
       .auth-container {
-        padding: 1.5rem;
+        padding: 2rem;
         width: 95%;
       }
       .nebula-container {
-        width: 150px;
-        height: 150px;
-        top: -60px;
+        width: 200px;
+        height: 200px;
+        top: -80px;
       }
       .auth-container input,
       .auth-container button,
       .toggle-auth,
       .forgot-password {
-        font-size: 0.75rem;
+        font-size: 0.85rem;
       }
       .auth-container .button-container {
-        gap: 0.75rem;
+        gap: 1rem;
       }
     }
   </style>
@@ -254,8 +270,8 @@
       <div class="nebula"></div>
       <canvas id="nebula-canvas" class="nebula-canvas"></canvas>
     </div>
-    <h2 class="text-xl font-semibold text-center mb-4" id="auth-title">Sign Up for Vynix AI</h2>
-    <div id="error-message" class="error-message" role="alert"></div>
+    <h2 class="text-2xl font-semibold text-center mb-6" id="auth-title">Sign Up for Vynix AI</h2>
+    <div id="error-message" class="error-message" role="alert" aria-live="polite"></div>
     <input type="email" id="email-input" placeholder="Email" aria-label="Email" required>
     <input type="password" id="password-input" placeholder="Password" aria-label="Password" required>
     <input type="text" id="name-input" placeholder="Your Name" aria-label="Your Name" required style="display: none;">
@@ -268,9 +284,23 @@
           <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l3.66-2.84z" fill="#FBBC05"/>
           <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.74 1 4.01 3.36 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
         </svg>
-        Continue with Google
+        <span id="google-button-text">Sign Up with Google</span>
       </button>
-      <button id="auth-button" class="transition">Sign Up</button>
+      <button id="auth-button" class="transition pulse-glow" aria-label="Sign up or Login">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" class="nebula-icon">
+          <circle cx="12" cy="12" r="10" fill="url(#nebula-gradient)" fill-opacity="0.8"/>
+          <circle cx="8" cy="8" r="2" fill="var(--nebula-blue)" fill-opacity="0.6"/>
+          <circle cx="16" cy="16" r="1.5" fill="var(--nebula-blue)" fill-opacity="0.6"/>
+          <circle cx="10" cy="16" r="1" fill="var(--nebula-blue)" fill-opacity="0.6"/>
+          <defs>
+            <radialGradient id="nebula-gradient" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(12 12) scale(12)">
+              <stop offset="0" stop-color="var(--nebula-blue)"/>
+              <stop offset="1" stop-color="var(--nebula-dark)" stop-opacity="0"/>
+            </radialGradient>
+          </defs>
+        </svg>
+        <span id="auth-button-text">Sign Up</span>
+      </button>
     </div>
     <div class="toggle-auth">
       Already have an account? <a href="#" id="toggle-link">Login</a>
@@ -305,7 +335,9 @@
       passwordInput: document.getElementById('password-input'),
       nameInput: document.getElementById('name-input'),
       authButton: document.getElementById('auth-button'),
+      authButtonText: document.getElementById('auth-button-text'),
       googleButton: document.getElementById('google-button'),
+      googleButtonText: document.getElementById('google-button-text'),
       toggleLink: document.getElementById('toggle-link'),
       forgotPassword: document.getElementById('forgot-password'),
       errorMessage: document.getElementById('error-message'),
@@ -329,7 +361,7 @@
 
     function showToast(message, type = 'error') {
       const toast = document.createElement('div');
-      toast.className = `fixed top-4 right-4 p-3 rounded-lg shadow-lg text-white text-sm ${type === 'error' ? 'bg-[var(--error)]' : 'bg-[var(--success)]'} slide-in`;
+      toast.className = `fixed top-4 right-4 p-4 rounded-lg shadow-lg text-white text-sm ${type === 'error' ? 'bg-[var(--error)]' : 'bg-[var(--success)]'} slide-in`;
       toast.textContent = message;
       toast.role = 'alert';
       document.body.appendChild(toast);
@@ -347,29 +379,35 @@
       }
       elements.nebulaContainer.classList.remove('hidden');
       const ctx = elements.nebulaCanvas.getContext('2d');
-      elements.nebulaCanvas.width = window.innerWidth <= 640 ? 150 : 200;
-      elements.nebulaCanvas.height = window.innerWidth <= 640 ? 150 : 200;
-      const particleCount = window.innerWidth <= 640 ? 10 : 20;
+      elements.nebulaCanvas.width = window.innerWidth <= 640 ? 200 : 260;
+      elements.nebulaCanvas.height = window.innerWidth <= 640 ? 200 : 260;
+      const particleCount = window.innerWidth <= 640 ? 50 : 100; // Increased particle count for cloud effect
       const particles = Array.from({length: particleCount}, () => ({
         x: elements.nebulaCanvas.width / 2,
         y: elements.nebulaCanvas.height / 2,
-        radius: Math.random() * 5 + 2,
+        radius: Math.random() * 6 + 2, // Larger particles for denser nebula
         angle: Math.random() * Math.PI * 2,
-        speed: Math.random() * 0.02 + 0.01,
-        color: `hsl(${Math.random() * 60 + 20}, 70%, 50%)`,
+        speed: Math.random() * 0.01 + 0.005, // Slower speed for smoother motion
+        opacity: Math.random() * 0.5 + 0.2, // Varied opacity for cloud-like effect
+        offset: Math.random() * 80 + 20, // Varying orbit radius
+        color: `hsl(${Math.random() * 90 + 180}, 70%, ${Math.random() * 20 + 50}%)`, // Softer colors
       }));
 
       function animateNebula() {
         ctx.clearRect(0, 0, elements.nebulaCanvas.width, elements.nebulaCanvas.height);
+        ctx.globalCompositeOperation = 'lighter'; // Blend particles for glowing effect
         particles.forEach(p => {
           p.angle += p.speed;
-          p.x = elements.nebulaCanvas.width / 2 + Math.cos(p.angle) * 50;
-          p.y = elements.nebulaCanvas.height / 2 + Math.sin(p.angle) * 50;
+          p.x = elements.nebulaCanvas.width / 2 + Math.cos(p.angle) * p.offset;
+          p.y = elements.nebulaCanvas.height / 2 + Math.sin(p.angle) * p.offset;
           ctx.beginPath();
           ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
           ctx.fillStyle = p.color;
+          ctx.globalAlpha = p.opacity;
           ctx.fill();
         });
+        ctx.globalCompositeOperation = 'source-over'; // Reset composition
+        ctx.globalAlpha = 1;
         state.nebulaAnimationFrame = requestAnimationFrame(animateNebula);
       }
       animateNebula();
@@ -378,8 +416,8 @@
     function toggleAuthMode() {
       state.isSignup = !state.isSignup;
       elements.authTitle.textContent = state.isSignup ? 'Sign Up for Vynix AI' : 'Login to Vynix AI';
-      elements.authButton.textContent = state.isSignup ? 'Sign Up' : 'Login';
-      elements.googleButton.textContent = state.isSignup ? 'Sign Up with Google' : 'Login with Google';
+      elements.authButtonText.textContent = state.isSignup ? 'Sign Up' : 'Login';
+      elements.googleButtonText.textContent = state.isSignup ? 'Sign Up with Google' : 'Login with Google';
       elements.toggleLink.textContent = state.isSignup ? 'Login' : 'Sign Up';
       elements.nameInput.style.display = state.isSignup ? 'block' : 'none';
       elements.forgotPassword.style.display = state.isSignup ? 'none' : 'block';
@@ -417,6 +455,7 @@
         elements.errorMessage.textContent = error.code === 'auth/email-already-in-use' ? 'Email already in use.' :
                                           error.code === 'auth/user-not-found' ? 'User not found.' :
                                           error.code === 'auth/wrong-password' ? 'Incorrect password.' :
+                                          error.code === 'auth/invalid-email' ? 'Invalid email format.' :
                                           'An error occurred. Please try again.';
       } finally {
         elements.authButton.disabled = false;
